Fix wrapping on iPhone

--- a/bread-buddy/content/style.css
+++ b/bread-buddy/content/style.css
@@ -130,7 +130,7 @@ h1 {
 
 .more-label {
     display: inline-block;
-    width: 35%;
+    width: 45%;
 }
 
 .more-value {
